--- a/src/themes/Header.css
+++ b/src/themes/Header.css
@@ -1,5 +1,5 @@
 .Header {
-    height: 80vh;
+    height: auto;
     width: 100%;
     display: flex;
     flex-wrap:wrap;
@@ -10,7 +10,7 @@
 
 .container {
     width: 100%;
-    height: 20rem;
+    height: 40rem;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
