--- a/src/themes/Projects.css
+++ b/src/themes/Projects.css
@@ -1,6 +1,16 @@
 .projectsBody {
-    min-height: 100vh;
+    min-height: 'auto';
     width: 100%;
-    text-align: end;
     background-color: #181a1b
+}
+
+.papers {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
